--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Robots';
+    src: url('./fonts/Roboto-Medium.ttf');
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -5,4 +10,6 @@
 
 .message {
     color: red;
+    font-family: 'Robots';
+    font-size: 50px;
 }
