--- a/src/style.css
+++ b/src/style.css
@@ -3,12 +3,12 @@
     src: url('./fonts/Roboto-Medium.ttf');
 }
 
-* {
+body {
     margin: 0;
-    padding: 0;
 }
 
-.message {
+
+#header {
     color: red;
     font-family: 'Robots';
     font-size: 50px;
