make #content into a grid to push header main and footer to the desired proportions to get a sense of eventual page layout.

--- a/src/style.css
+++ b/src/style.css
@@ -5,8 +5,14 @@
 
 body {
     margin: 0;
+
 }
 
+#content {
+    display: grid;
+    height: 100vh;
+    grid-template-rows: 4fr 30fr 2fr;
+}
 
 #header {
     color: red;
