create nav section of header in load.js. populate it with home, menu and contact buttons with id and class attributes. build simple createElement/appendChild functions for each page module home,js,menu.js, contact.js. create setMain() function that listens for a click on a nav button and based on the clicked button's id, appends to div#main one of the page module functions as imported from its js module.

--- a/src/style.css
+++ b/src/style.css
@@ -11,11 +11,26 @@ body {
 #content {
     display: grid;
     height: 100vh;
-    grid-template-rows: 4fr 30fr 2fr;
+    grid-template-rows: 4fr 28fr 2fr;
 }
 
 #header {
+    display: flex;
     color: red;
     font-family: 'Robots';
     font-size: 50px;
+    border: solid 1px blue;
+
+}
+
+#main {
+    border: solid 1px rgb(0, 255, 76);
+}
+ 
+#footer {
+    border: solid 1px rgb(234, 0, 255);
+}
+
+#home {
+    background-color: aqua;
 }
