add clean: true to webpack-config.js to clear out clutter of autogenerated files from webpack. this created the issue of auto-deletiing my index.html. add HTML Plug-in to webpack.config.js to autogenerate a new index.html using the template of template.html that ic reate in src/. changed footer and footer icon style and color. still trying to figure out how to manipulate SVGs while bundling with webpack.

--- a/src/style.css
+++ b/src/style.css
@@ -82,8 +82,8 @@ body {
 #footer {
     display: flex;
     justify-content: space-between;
-    background-color: var(--blue-theme);
-    box-shadow: 0px 0px 3px 3px var(--blue-theme);
+    /* background-color: var(--blue-theme);
+    box-shadow: 0px 0px 3px 3px var(--blue-theme); */
     max-height: 46.5px;
     padding: 0 30px 0 30px;
 }
@@ -103,7 +103,7 @@ body {
 
 .footLink {
     height: 80%;
-    color: aqua;
+    color: rgb(127, 175, 175);
 }
 /* #ghLink {
     all: unset;
