add logo at top of info section acting as a header for that section by replicating parts of createLogo in load.js inside the info section of home.js

--- a/src/style.css
+++ b/src/style.css
@@ -46,13 +46,19 @@ body {
     margin: 0 10px 0 10px;
 }
 
-#logo {
+#logo,
+#infoLogo {
     display: flex;
     align-items: center;
     font-family: 'fancy';
     color: var(--blue-theme);
     font-size: 80px;
     font-weight: bold
+}
+
+#infoLogo {
+    justify-content: center;
+    padding-bottom: 20px;
 }
 
 #nav {
@@ -168,7 +174,7 @@ body {
     flex-direction: column;
     flex: 1 1 auto;
     justify-content: center;
-    margin: 35px 0 35px 0;
+    margin: 35px 0 40px 0;
 }
 
 #address {
