--- a/src/style.css
+++ b/src/style.css
@@ -147,7 +147,7 @@ body {
     font-size: 23px;
     max-width: 650px;
     text-align: center;
-    border-radius: 25px;
+    border-radius: 65px;
     background-color: transparent;
     transition: ease-out .3s;
 }
@@ -159,12 +159,13 @@ body {
 
 #wall {
     max-width: 100vw;
-    min-width: 770px;
+    min-width: 770px
 }
 
 #wallImg {
     max-width: 100vw;
         min-width: 770px;
+        height: 100%;
 }
 
 #info{
@@ -174,11 +175,15 @@ body {
     flex-direction: column;
     flex: 1 1 auto;
     justify-content: center;
-    margin: 35px 0 40px 0;
+    padding: 35px 0 40px 0;
+    width: 100%;
+    height: 100%;
+    /* background-color: var(--rose-theme); */
 }
 
 #address {
     display: block;
+    align-self: center;
     font-size: 18px;
     margin-bottom: 20px;
 }
