--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 :root {
+    --body-theme: #faf7f3;
     --blue-theme: rgb(95, 113, 173);
     --tan-theme: rgb(255, 242, 227);
     --rose-theme: rgb(253, 235, 214);
@@ -21,17 +22,21 @@
     src: url('./fonts/Louis\ George\ Cafe\ Light.ttf');
 }
 
+/* MAIN HTML BOXES */
 body {
     margin: 0;
-    background-color: #faf7f3;
+    background-color: var(--body-theme);
 }
 
 #content {
     display: grid;
     min-height: 100vh;
+    max-width: 100vw;
     grid-template-rows: 93px 1fr 46.5px;
 }
 
+/* STATIC PAGE STLYES */
+/* HEAD STYLES */
 #header {
     display: flex;
     justify-content: center;
@@ -82,11 +87,13 @@ body {
     box-shadow: 0px 0px 20px 20px var(--tan-theme);
 }
 
+/* MAIN SECTION */
 #main {
     display: flex;
     flex-direction: column;
 }
  
+/* FOOT SECTION */
 #footer {
     display: flex;
     justify-content: space-between;
@@ -138,8 +145,12 @@ body {
 }
 
 #welcome {
-    display: block;
+    display: flex;
+    justify-content: center;
     margin: 35px 0 35px 0;
+    width: 100%;
+    z-index: 1;
+    box-shadow: 0 40px 50px 50px var(--body-theme);
 }
 
 .welcome-text {
@@ -163,7 +174,7 @@ body {
 }
 
 #wallImg {
-    max-width: 100vw;
+    max-width: 100%;
         min-width: 770px;
         height: 100%;
 }
@@ -196,4 +207,56 @@ body {
 
 .day {
     text-align: right;
+}
+
+/* MENU STYLE */
+#menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    height: 100%;
+}
+
+#menu-list {
+    width: clamp(650px, 55vw, 1032px);
+    margin: 0 0 60px 0;
+}
+
+.menu-item-even,
+.menu-item-odd {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 100%;
+    height: 300px;
+}
+
+.menu-item-even {
+    background-color: var(--body-theme);
+    padding: 0 20px 0 0;
+}
+
+.menu-item-odd {
+    background-color: var(--rose-theme);
+    padding: 0 25px 0 25px;
+}
+
+.menu-image {
+    max-height: 250px;
+}
+.item-info{
+    font-family: 'info2';
+    padding: 0 20px 0 0;
+    width: 45%
+}
+
+.item-title {
+ display: block;
+}
+
+.menu-description {
+    display: flex;
+    font-size: 20px;
+    align-items: center;
+
 }
