--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,7 @@
     src: url('./fonts/Louis\ George\ Cafe\ Light.ttf');
 }
 
-/* MAIN HTML BOXES */
+/* ------------MAIN HTML BOXES------------ */
 body {
     margin: 0;
     background-color: var(--body-theme);
@@ -35,17 +35,18 @@ body {
     grid-template-rows: 93px 1fr 46.5px;
 }
 
-/* STATIC PAGE STLYES */
+/* ------------STATIC PAGE STLYES------------ */
 /* HEAD STYLES */
 #header {
     display: flex;
     justify-content: center;
     max-height: 93px;
+    width: 100%
 }
 
 #headerBox {
     display: flex;
-    width: clamp(650px, 55vw, 1032px);
+    width: clamp(500px, 55vw, 1032px);
     justify-content: space-between;
     align-items: center;
     margin: 0 10px 0 10px;
@@ -58,7 +59,8 @@ body {
     font-family: 'fancy';
     color: var(--blue-theme);
     font-size: 80px;
-    font-weight: bold
+    font-weight: bold;
+    transition: ease-out .3s;
 }
 
 #infoLogo {
@@ -75,6 +77,7 @@ body {
 .navBtn {
     font-family: 'info2';
     font-size: 25px;
+    color: black;
     border: none;
     border-radius: 25px;
     background-color: transparent;
@@ -99,19 +102,20 @@ body {
     justify-content: space-between;
     max-height: 46.5px;
     min-width: 650px;
-    padding: 0 60px 0 60px;
 }
 
 #gitHub {
     display: flex;
     height: 100%;
     text-decoration: none;
+    margin: 0 0 0 60px;
 }
 
 #socials {
     display: flex;
     gap: 30px;
-    height: 100%
+    height: 100%;
+    margin: 0 60px 0 0;
 }
 
 .fa-foot {
@@ -127,7 +131,7 @@ body {
 }
 
 
-/* HOME MODULE STYLE */
+/* ------------HOME MODULE STYLE------------ */
 #home {
     display: flex;
     flex-direction: column;
@@ -141,7 +145,7 @@ body {
 }
 
 #coverImg {
-    width: clamp(650px, 55vw, 1032px);
+    width: clamp(500px, 55vw, 1032px);
 }
 
 #welcome {
@@ -151,6 +155,7 @@ body {
     width: 100%;
     z-index: 1;
     box-shadow: 0 40px 50px 50px var(--body-theme);
+    transition: ease-out .3s;
 }
 
 .welcome-text {
@@ -170,13 +175,13 @@ body {
 
 #wall {
     max-width: 100vw;
-    min-width: 770px
+    min-width: 320px
 }
 
 #wallImg {
     max-width: 100%;
-        min-width: 770px;
-        height: 100%;
+    min-width: 320px;
+    /* height: 100%; */
 }
 
 #info{
@@ -197,6 +202,7 @@ body {
     align-self: center;
     font-size: 18px;
     margin-bottom: 20px;
+    transition: ease-out .3s;
 }
 
 #schedule {
@@ -209,7 +215,7 @@ body {
     text-align: right;
 }
 
-/* MENU STYLE */
+/* ------------MENU STYLE------------ */
 #menu {
     display: flex;
     flex-direction: column;
@@ -259,4 +265,86 @@ body {
     font-size: 20px;
     align-items: center;
 
+}
+
+/* BREAK */
+/* BREAK */
+
+/* ------------NARROWER------------ */
+@media only screen and (max-width: 1000px) {
+    /* PAGE */
+    #headerBox {
+        width: clamp(400px, 55vw, 1032px);
+    }
+    #logo,
+    #infoLogo {
+        font-size: 4.2em;
+    }
+    #nav {
+        gap: 8px;
+    }
+    .navBtn {
+        font-size: 22px;
+    }
+
+     /* HOME */
+    #coverImg {
+        width: clamp(400px, 55vw, 1032px);
+    }
+    #footer {
+        min-width: 100%;
+    }
+    .welcome-text {
+        max-width: 400;
+        font-size: 20px;
+        min-width: 400px;
+    }
+    #address {
+        font-size: 16px;
+    }
+
+    /* MENU */
+
+}
+
+
+/* ------------MOBILE------------ */
+@media only screen and (max-width: 800px) { 
+    /* PAGE */
+    #content {
+        grid-template-rows: 100px 1fr 46.5px;
+    }
+
+    #header {
+        max-height: 100px;
+        align-items: flex-start;
+    }
+    #headerBox {
+        flex-direction: column;
+        width: clamp(300px, 55vw, 1032px);
+    }
+    #logo {
+        font-size: 3.6em;
+    }
+    .navBtn {
+        font-size: 20px;
+     }
+    #nav {
+        gap: 3px;
+    }
+
+    /* HOME */
+    #coverImg {
+        width: clamp(300px, 55vw, 1032px);
+    }
+    .welcome-text {
+    font-size: 18px;
+    width: clamp(300px, 55vw, 1032px);
+    min-width: 300px;
+    }
+    #address {
+        font-size: 14px;
+    }
+
+    /* MENU */
 }
