adjust coverImg, welcome, footer and other style in mobile modes.

--- a/src/style.css
+++ b/src/style.css
@@ -175,13 +175,15 @@ body {
 
 #wall {
     max-width: 100vw;
-    min-width: 320px
+    min-width: 320px;
+    transition: ease-in-out .3s;
 }
 
 #wallImg {
     max-width: 100%;
     min-width: 320px;
-    /* height: 100%; */
+    min-width: 320px;
+    transition: ease-in-out .3s;
 }
 
 #info{
@@ -295,9 +297,8 @@ body {
         min-width: 100%;
     }
     .welcome-text {
-        max-width: 400;
         font-size: 20px;
-        min-width: 400px;
+        width: clamp(399px, 55vw, 550px);
     }
     #address {
         font-size: 16px;
@@ -329,19 +330,37 @@ body {
     .navBtn {
         font-size: 20px;
      }
+    .navBtn:hover {
+        box-shadow: 0px 0px 10px 10px var(--tan-theme);
+    }
     #nav {
         gap: 3px;
+    }
+    #gitHub {
+        margin: 0 0 0 20px;
+    }
+
+    #socials {
+        margin: 0 20px 0 0;
+    }
+    .fa-foot:hover {
+        background-color: var(--rose-theme);
+        box-shadow: 0px 0px 8px 8px var(--rose-theme);
     }
 
     /* HOME */
     #coverImg {
-        width: clamp(300px, 55vw, 1032px);
+        width: clamp(320px, 55vw, 1032px);
     }
     .welcome-text {
-    font-size: 18px;
-    width: clamp(300px, 55vw, 1032px);
-    min-width: 300px;
+        font-size: 18px;
+        width: clamp(300px, 55vw, 1032px);
+        min-width: 300px;
     }
+    #welcome {
+        box-shadow: 0 40px 25px 25px var(--body-theme);
+    }
+    
     #address {
         font-size: 14px;
     }
