--- a/src/style.css
+++ b/src/style.css
@@ -237,6 +237,7 @@ body {
     align-items: center;
     max-width: 100%;
     height: 300px;
+    transition: ease-in-out .3s;
 }
 
 .menu-item-even {
@@ -251,21 +252,28 @@ body {
 
 .menu-image {
     max-height: 250px;
+    transition: ease-in-out .3s;
 }
 .item-info{
     font-family: 'info2';
     padding: 0 20px 0 0;
-    width: 45%
+    width: 45%;
+    transition: ease-in-out .3s;
 }
 
 .item-title {
- display: block;
+    display: block;
+    font-size: 25px;
+    font-weight: bold;
+    margin: 0 0 20px 0;
+    transition: ease-in-out .3s;
 }
 
 .menu-description {
     display: flex;
     font-size: 20px;
     align-items: center;
+    transition: ease-in-out .3s;
 
 }
 
@@ -280,7 +288,7 @@ body {
     }
     #logo,
     #infoLogo {
-        font-size: 4.2em;
+        font-size: 70px;
     }
     #nav {
         gap: 8px;
@@ -366,4 +374,31 @@ body {
     }
 
     /* MENU */
+    #menu-list {
+        width: 100%
+    }
+    .menu-item-even,
+    .menu-item-odd {
+        justify-content: center;
+        height: 200px;
+        padding: 0 8px 0 8px;
+        margin: 0 0 15px 0;
+        gap: 0 15px;
+    }
+    .menu-image {
+    width: clamp( 130px, 40%, 250px);
+    }
+    .item-info{
+    font-family: 'info2';
+    padding: 0 0 0 0;
+    width: 60%
+    }
+    .menu-description {
+    font-size: 16px;
+    width: clamp( 130px, 100%, 460px);
+    }
+    .item-title {
+        font-size: 18px;
+        margin: 0 0 0 0;
+    }
 }
