change contactInfo(). I was only returning one item when asked to return three. So append all 3 to one DOM item first, then return that one item. works better. adjust contact.map size to a clamp range so it resizes accordingly.

--- a/src/style.css
+++ b/src/style.css
@@ -310,11 +310,12 @@ body {
 }
 
 #map {
-    display: block;
+    display: flex;
+    justify-content: center;
 }
 
 #map-iframe {
-    width: 600px;
+    width: clamp(320px, 55vw, 700px);
     height: 450px;
 }
 
