--- a/src/style.css
+++ b/src/style.css
@@ -60,7 +60,7 @@ body {
     color: var(--blue-theme);
     font-size: 80px;
     font-weight: bold;
-    transition: ease-out .3s;
+    transition: ease-in-out .3s;
 }
 
 #infoLogo {
@@ -145,7 +145,7 @@ body {
 }
 
 #coverImg {
-    width: clamp(500px, 55vw, 1032px);
+    width: clamp(598px, 55vw, 1032px);
 }
 
 #welcome {
@@ -155,7 +155,7 @@ body {
     width: 100%;
     z-index: 1;
     box-shadow: 0 40px 50px 50px var(--body-theme);
-    transition: ease-out .3s;
+    transition: ease-in-out .3s;
 }
 
 .welcome-text {
@@ -165,7 +165,7 @@ body {
     text-align: center;
     border-radius: 65px;
     background-color: transparent;
-    transition: ease-out .3s;
+    transition: ease-in-out .3s;
 }
 
 .welcome-text:hover {
@@ -204,7 +204,7 @@ body {
     align-self: center;
     font-size: 18px;
     margin-bottom: 20px;
-    transition: ease-out .3s;
+    transition: ease-in-out .3s;
 }
 
 #schedule {
@@ -277,46 +277,56 @@ body {
 
 }
 
-/* CONTACT */
+/* ----------CONTACT--------- */
 #contact {
     display: flex;
     justify-content: center;
     height: 100%;
-    width: 100vw;
+
 }
 
 #contact-box {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     width: clamp(500px, 55vw, 1032px);
+    transition: ease-in-out .3s;
 }
 
-#contact-address {
-    display: flex;
+#info-box {
+    font-family: 'info1';
+    width: clamp(320px, 55vw, 700px);
+    padding: 15px 0 15px 0;
 }
 
-#contact-email {
+.contact-info {
     display: flex;
+    font-size: 20px;
+    gap: 20px;
+    margin: 5px 0 15px 0;
 }
 
-#contact-phone {
-    display: flex;
-}
 
 .fa-contact {
     display: flex;
     align-items: center;
+    color: var(--blue-theme);
+    font-size: 25px;
+    border-radius: 25px;
+    transition: ease-out .3s;
 }
 
 #map {
     display: flex;
     justify-content: center;
+    margin: 0 0 40px 0;
+    height: 100%;
 }
 
 #map-iframe {
     width: clamp(320px, 55vw, 700px);
-    height: 450px;
+    height: clamp(200px, 100%, 450px);
 }
 
 
@@ -342,7 +352,7 @@ body {
 
      /* HOME */
     #coverImg {
-        width: clamp(400px, 55vw, 1032px);
+        width: clamp(598px, 55vw, 1032px);
     }
     #footer {
         min-width: 100%;
@@ -401,7 +411,7 @@ body {
 
     /* HOME */
     #coverImg {
-        width: clamp(320px, 55vw, 1032px);
+        width: clamp(320px, 75vw, 1032px);
     }
     .welcome-text {
         font-size: 18px;
@@ -429,19 +439,27 @@ body {
         gap: 0 15px;
     }
     .menu-image {
-    width: clamp( 130px, 40%, 250px);
+        width: clamp( 130px, 40%, 250px);
     }
     .item-info{
-    font-family: 'info2';
-    padding: 0 0 0 0;
-    width: 60%
+        font-family: 'info2';
+        padding: 0 0 0 0;
+        width: 60%;
     }
     .menu-description {
-    font-size: 16px;
-    width: clamp( 130px, 100%, 460px);
+        font-size: 16px;
+        width: clamp( 130px, 100%, 460px);
     }
     .item-title {
         font-size: 18px;
         margin: 0 0 0 0;
     }
+
+    /* CONTACT */
+    #contact-box {
+        width: clamp(320px, 55vw, 1032px);
+    }
+    #info-box {
+        padding: 15px 10px 15px 10px;
+}
 }
